K8S/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spyserv-frontend
  template:
    metadata:
      labels:
        app: spyserv-frontend
    spec:
      containers:
        - name: spyserv-frontend
          image: icykcypher/spyserv-frontend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spyserv-frontend-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: spyserv-frontend
  ports:
    - port: 43241
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-nodeport-srv
spec:  
  type: NodePort
  selector: 
    app: spyserv-frontend
  ports:
    - protocol: TCP
      port: 12345
      targetPort: 8080
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata: 
    name: fontend-loadbalancer
spec:  
    type: LoadBalancer
    selector: 
        app: spyserv-frontend
    ports:
      - protocol: TCP
        port: 12345
        targetPort: 80
